<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.forgetpassword"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password_Recovery"
        android:textSize="30sp"
        android:fontFamily="@font/cairo_bold"
        android:textColor="@color/colorp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />
    <ImageView
        android:layout_width="157dp"
        android:layout_height="139dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/hand"
        />
    <EditText
        android:id="@+id/edtstudentnumberforgetpass"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:hint="@string/Student_ID"
        android:inputType="number"
        android:fontFamily="@font/cairo"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:background="@drawable/editshap"
        android:paddingEnd="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="50dp"
         />
    <EditText
        android:id="@+id/edtstudntIDforgetpass"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:hint="@string/Identification_Number"
        android:inputType="number"
        android:fontFamily="@font/cairo"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:background="@drawable/editshap"
        android:paddingEnd="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/edtbirthdayforgetpass"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:hint="@string/Date_of_Birth"
        android:textSize="15sp"
        android:inputType="date"
        android:fontFamily="@font/cairo"
        android:layout_gravity="center"
        android:background="@drawable/editshap"
        android:paddingEnd="12dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />
    <EditText
        android:id="@+id/edtavregeforgetpass"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:hint="@string/high_school_average"
        android:textSize="15sp"
        android:inputType="number"
        android:fontFamily="@font/cairo"
        android:layout_gravity="center"
        android:background="@drawable/editshap"
        android:paddingEnd="12dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>
    <Button
        android:id="@+id/bntresivepassword"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:text="@string/Password_Recovery"
        android:textColor="#fff"
        android:fontFamily="@font/cairo"
        android:backgroundTint="@color/colorp"
        android:layout_gravity="center"

        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/butunshap"
        />

</LinearLayout>