<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.login"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/sign_in"
        android:textColor="@color/colorp"
        android:textSize="33sp" />
    <ImageView
        android:layout_width="174dp"
        android:layout_height="165dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/login"
        />
    <EditText
        android:id="@+id/edtstudentnumberlogin"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:hint="@string/Student_ID"
        android:inputType="number"
        android:textSize="15sp"

        android:fontFamily="@font/cairo"
        android:layout_gravity="center"
        android:background="@drawable/editshap"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>
    <EditText
        android:id="@+id/edtstudentpasswordlogin"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:hint="@string/password"
        android:fontFamily="@font/cairo"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:background="@drawable/editshap"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:paddingRight="20dp" />

    <TextView
        android:id="@+id/tvforgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginStart="230dp"
        android:textColor="@color/colorg"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cairo"
        android:text="@string/Forgot_your_password"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bntlogin"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:text="@string/sign_in"
        android:textColor="#fff"
        android:backgroundTint="@color/colorp"
        android:padding="2dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/cairo"
        android:layout_marginTop="20dp"
        android:background="@drawable/butunshap"
        />

</LinearLayout>