<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AcadimcInformation"
    android:orientation="vertical"
    android:background="#fff">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="Fragments.menu">
        <ImageView
            android:layout_marginStart="20dp"
            android:id="@+id/img"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@mipmap/aqsauniv"
            android:layout_marginLeft="20dp"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/img"
            android:text="@string/Academic_data"
            android:textStyle="bold"
            android:fontFamily="@font/cairo_bold"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/img"
            android:layout_marginLeft="5dp">
        </TextView>
        <View
            android:layout_below="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/line"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/black"/>
    </RelativeLayout>




    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="30dp"

        app:cardCornerRadius="29dp"
        app:cardElevation="9dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_semibold"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:text="@string/College"
                android:textColor="#762C59"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />
            <TextView
                android:id="@+id/college"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:textSize="15sp"
                android:text="@string/College_of_Computing_and_Information_Technology"
                android:textColor="#000"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_semibold"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:text="@string/Specialization"
                android:textColor="#762C59"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />
            <TextView
                android:id="@+id/specialization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:textSize="15sp"
                android:text="@string/computer_science"
                android:textColor="#000"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:textSize="16sp"
                    android:text="@string/Academic_level"
                    android:textColor="#762C59"
                    />
                <TextView
                    android:id="@+id/academicLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:textSize="15sp"
                    android:text="@string/fourth"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:textSize="16sp"
                    android:text="@string/Registration_hours"
                    android:textColor="#762C59"
                    />
                <TextView
                    android:id="@+id/studyhoure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:textSize="15sp"
                    android:text=" 138 "
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:textSize="16sp"
                    android:text="@string/completed_hours"
                    android:textColor="#762C59"
                    />
                <TextView
                    android:id="@+id/completinghoure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:textSize="15sp"
                    android:text="9"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:textSize="16sp"
                    android:text="@string/equation_hours"
                    android:textColor="#762C59"
                    />
                <TextView
                    android:id="@+id/equationHoure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:textSize="15sp"
                    android:text="3"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:textSize="16sp"
                    android:text="@string/GPA"
                    android:textColor="#762C59"
                    />
                <TextView
                    android:id="@+id/GPA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:textSize="15sp"
                    android:text="92.2"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:textSize="16sp"
                    android:text="@string/Type_of_certificate"
                    android:textColor="#762C59"
                    />
                <TextView
                    android:id="@+id/typeth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:textSize="15sp"
                    android:text="@string/scientific"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:textSize="16sp"
                    android:text="@string/High_school_diploma_date"
                    android:textColor="#762C59"
                    />
                <TextView
                    android:id="@+id/dateth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:textSize="15sp"
                    android:text="7/12/2018"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:textSize="16sp"
                    android:text="@string/high_school_average"
                    android:textColor="#762C59"
                    />
                <TextView
                    android:id="@+id/GPAth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:textSize="15sp"
                    android:text="92.8"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:textColor="#000"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>