<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/midterm"
            android:fontFamily="@font/cairo_light"
            android:gravity="center"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="#C6487E"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/works"
            android:fontFamily="@font/cairo_light"
            android:gravity="center"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="#C6487E"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Final_mark"
            android:fontFamily="@font/cairo_light"
            android:gravity="center"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="#C6487E"
            android:layout_weight="1"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mark"
            android:fontFamily="@font/cairo_light"
            android:gravity="center"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="#C6487E"
            android:layout_weight="1"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Appreciation"
            android:fontFamily="@font/cairo_light"
            android:gravity="center"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="#C6487E"
            android:layout_weight="1"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gd_child_mid"
        android:text="19"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gd_child_a3mal"
        android:text="30"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gd_child_final"
        android:text="47"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_weight="1"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gd_child_daraja"
        android:text="96"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_weight="1"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/gd_child_tagdeer"
        android:text="أ"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>