<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="220dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fff"
    app:cardElevation="9dp"
    >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          >
          <TextView
              android:id="@+id/msg"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/choose_the_language"
              android:textSize="20sp"
              android:textColor="#000"
              android:layout_marginTop="40dp"
              android:layout_gravity="start"
              android:layout_marginStart="20sp"
              android:layout_marginLeft="20sp" />
         <androidx.cardview.widget.CardView
             android:layout_width="280dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             app:cardCornerRadius="29dp"
             app:cardElevation="9dp"
             >
             <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:entries="@array/app1"
                 android:id="@+id/sp"/>
         </androidx.cardview.widget.CardView>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="55dp"
              android:orientation="horizontal"
              android:background="#762C59"
              android:layout_marginTop="50dp"
              >
              <TextView
                  android:id="@+id/yes"
                  android:layout_width="0dp"
                  android:layout_height="55dp"
                  android:text="@string/yes"
                  android:layout_marginStart="20dp"
                  android:gravity="center"
                  android:textSize="15sp"
                  android:layout_weight="2"
                  android:textColor="#fff"
                  android:layout_marginLeft="20dp" />
              <TextView
                  android:layout_width="0dp"
                  android:layout_height="55dp"
                  android:text="I"
                  android:layout_weight="1"
                  android:layout_marginStart="20dp"
                  android:gravity="center"
                  android:textSize="15sp"
                  android:textColor="#fff"
                  android:layout_marginLeft="20dp" />
              <TextView
                  android:id="@+id/no"
                  android:layout_width="0dp"
                  android:layout_height="55dp"
                  android:text="@string/no"
                  android:layout_weight="2"
                  android:layout_marginStart="20dp"
                  android:gravity="center"
                  android:textSize="15sp"
                  android:textColor="#fff"
                  android:layout_marginLeft="20dp" />
          </LinearLayout>
      </LinearLayout>

</androidx.cardview.widget.CardView>